--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,7 +27,8 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
+
 
       - name: Build Vite app
         run: npm run build
